# stableGRpy

./: README.md  designdoc_mvp.md  pyproject.toml
stableGR/: _validate.py
stableGRpy/: .gitignore  mvn_gibbs.py
stableGRpy/tests/: test_mvn_gibbs.py  test_validate.py
